--- a/public/css/jquery-ui.theme.css
+++ b/public/css/jquery-ui.theme.css
@@ -8,7 +8,7 @@
  *
  * http://api.jqueryui.com/category/theming/
  *
- * To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Verdana%2CArial%2Csans-serif&fwDefault=normal&fsDefault=1.1em&cornerRadius=4px&bgColorHeader=%230BF80C&bgTextureHeader=highlight_soft&bgImgOpacityHeader=75&borderColorHeader=%230BF80C&fcHeader=%23ffffff&iconColorHeader=%23ffffff&bgColorContent=%23ffffff&bgTextureContent=flat&bgImgOpacityContent=75&borderColorContent=%230BF80C&fcContent=%23333333&iconColorContent=%23333333&bgColorDefault=%230BF80C&bgTextureDefault=glass&bgImgOpacityDefault=75&borderColorDefault=%230BF80C&fcDefault=%23ffffff&iconColorDefault=%23ffffff&bgColorHover=%232be52c&bgTextureHover=glass&bgImgOpacityHover=50&borderColorHover=%230BF80C&fcHover=%23212121&iconColorHover=%23454545&bgColorActive=%230BF80C&bgTextureActive=glass&bgImgOpacityActive=65&borderColorActive=%230BF80C&fcActive=%23ffffff&iconColorActive=%23ffffff&bgColorHighlight=%23fbf9ee&bgTextureHighlight=glass&bgImgOpacityHighlight=55&borderColorHighlight=%23fcefa1&fcHighlight=%23363636&iconColorHighlight=%232e83ff&bgColorError=%23fef1ec&bgTextureError=glass&bgImgOpacityError=95&borderColorError=%23cd0a0a&fcError=%23cd0a0a&iconColorError=%23cd0a0a&bgColorOverlay=%230BF80C&bgTextureOverlay=flat&bgImgOpacityOverlay=0&opacityOverlay=30&bgColorShadow=%230BF80C&bgTextureShadow=flat&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=8px&offsetTopShadow=-8px&offsetLeftShadow=-8px&cornerRadiusShadow=8px
+ * To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Verdana%2CArial%2Csans-serif&fwDefault=normal&fsDefault=1.1em&cornerRadius=4px&bgColorHeader=%239FC905&bgTextureHeader=highlight_soft&bgImgOpacityHeader=75&borderColorHeader=%239FC905&fcHeader=%23FFFFFF&iconColorHeader=%23FFFFFF&bgColorContent=%23ffffff&bgTextureContent=flat&bgImgOpacityContent=75&borderColorContent=%239FC905&fcContent=%23222222&iconColorContent=%23222222&bgColorDefault=%239FC905&bgTextureDefault=glass&bgImgOpacityDefault=75&borderColorDefault=%239FC905&fcDefault=%23FFFFFF&iconColorDefault=%23FFFFFF&bgColorHover=%23bffc5c&bgTextureHover=glass&bgImgOpacityHover=75&borderColorHover=%239FC905&fcHover=%239FC905&iconColorHover=%239FC905&bgColorActive=%23ffffff&bgTextureActive=glass&bgImgOpacityActive=65&borderColorActive=%23aaaaaa&fcActive=%239FC905&iconColorActive=%239FC905&bgColorHighlight=%23FFFFFF&bgTextureHighlight=inset_soft&bgImgOpacityHighlight=25&borderColorHighlight=%239FC905&fcHighlight=%23363636&iconColorHighlight=%232e83ff&bgColorError=%23fef1ec&bgTextureError=glass&bgImgOpacityError=95&borderColorError=%23cd0a0a&fcError=%23cd0a0a&iconColorError=%23cd0a0a&bgColorOverlay=%239FC905&bgTextureOverlay=flat&bgImgOpacityOverlay=0&opacityOverlay=30&bgColorShadow=%239FC905&bgTextureShadow=flat&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=8px&offsetTopShadow=-8px&offsetLeftShadow=-8px&cornerRadiusShadow=8px
  */
 
 
@@ -29,21 +29,21 @@
 	font-size: 1em;
 }
 .ui-widget-content {
-	border: 1px solid #0BF80C;
+	border: 1px solid #9FC905;
 	background: #ffffff url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
-	color: #333333;
+	color: #222222;
 }
 .ui-widget-content a {
-	color: #333333;
+	color: #222222;
 }
 .ui-widget-header {
-	border: 1px solid #0BF80C;
-	background: #0BF80C url("images/ui-bg_highlight-soft_75_0BF80C_1x100.png") 50% 50% repeat-x;
-	color: #ffffff;
+	border: 1px solid #9FC905;
+	background: #9FC905 url("images/ui-bg_highlight-soft_75_9FC905_1x100.png") 50% 50% repeat-x;
+	color: #FFFFFF;
 	font-weight: bold;
 }
 .ui-widget-header a {
-	color: #ffffff;
+	color: #FFFFFF;
 }
 
 /* Interaction states
@@ -51,15 +51,15 @@
 .ui-state-default,
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
-	border: 1px solid #0BF80C;
-	background: #0BF80C url("images/ui-bg_glass_75_0BF80C_1x400.png") 50% 50% repeat-x;
+	border: 1px solid #9FC905;
+	background: #9FC905 url("images/ui-bg_glass_75_9FC905_1x400.png") 50% 50% repeat-x;
 	font-weight: normal;
-	color: #ffffff;
+	color: #FFFFFF;
 }
 .ui-state-default a,
 .ui-state-default a:link,
 .ui-state-default a:visited {
-	color: #ffffff;
+	color: #FFFFFF;
 	text-decoration: none;
 }
 .ui-state-hover,
@@ -68,10 +68,10 @@
 .ui-state-focus,
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
-	border: 1px solid #0BF80C;
-	background: #2be52c url("images/ui-bg_glass_50_2be52c_1x400.png") 50% 50% repeat-x;
+	border: 1px solid #9FC905;
+	background: #bffc5c url("images/ui-bg_glass_75_bffc5c_1x400.png") 50% 50% repeat-x;
 	font-weight: normal;
-	color: #212121;
+	color: #9FC905;
 }
 .ui-state-hover a,
 .ui-state-hover a:hover,
@@ -81,21 +81,21 @@
 .ui-state-focus a:hover,
 .ui-state-focus a:link,
 .ui-state-focus a:visited {
-	color: #212121;
+	color: #9FC905;
 	text-decoration: none;
 }
 .ui-state-active,
 .ui-widget-content .ui-state-active,
 .ui-widget-header .ui-state-active {
-	border: 1px solid #0BF80C;
-	background: #0BF80C url("images/ui-bg_glass_65_0BF80C_1x400.png") 50% 50% repeat-x;
+	border: 1px solid #aaaaaa;
+	background: #ffffff url("images/ui-bg_glass_65_ffffff_1x400.png") 50% 50% repeat-x;
 	font-weight: normal;
-	color: #ffffff;
+	color: #9FC905;
 }
 .ui-state-active a,
 .ui-state-active a:link,
 .ui-state-active a:visited {
-	color: #ffffff;
+	color: #9FC905;
 	text-decoration: none;
 }
 
@@ -104,8 +104,8 @@
 .ui-state-highlight,
 .ui-widget-content .ui-state-highlight,
 .ui-widget-header .ui-state-highlight {
-	border: 1px solid #fcefa1;
-	background: #fbf9ee url("images/ui-bg_glass_55_fbf9ee_1x400.png") 50% 50% repeat-x;
+	border: 1px solid #9FC905;
+	background: #FFFFFF url("images/ui-bg_inset-soft_25_FFFFFF_1x100.png") 50% bottom repeat-x;
 	color: #363636;
 }
 .ui-state-highlight a,
@@ -163,20 +163,20 @@
 }
 .ui-icon,
 .ui-widget-content .ui-icon {
-	background-image: url("images/ui-icons_333333_256x240.png");
+	background-image: url("images/ui-icons_222222_256x240.png");
 }
 .ui-widget-header .ui-icon {
-	background-image: url("images/ui-icons_ffffff_256x240.png");
+	background-image: url("images/ui-icons_FFFFFF_256x240.png");
 }
 .ui-state-default .ui-icon {
-	background-image: url("images/ui-icons_ffffff_256x240.png");
+	background-image: url("images/ui-icons_FFFFFF_256x240.png");
 }
 .ui-state-hover .ui-icon,
 .ui-state-focus .ui-icon {
-	background-image: url("images/ui-icons_454545_256x240.png");
+	background-image: url("images/ui-icons_9FC905_256x240.png");
 }
 .ui-state-active .ui-icon {
-	background-image: url("images/ui-icons_ffffff_256x240.png");
+	background-image: url("images/ui-icons_9FC905_256x240.png");
 }
 .ui-state-highlight .ui-icon {
 	background-image: url("images/ui-icons_2e83ff_256x240.png");
@@ -396,14 +396,14 @@
 
 /* Overlays */
 .ui-widget-overlay {
-	background: #0BF80C url("images/ui-bg_flat_0_0BF80C_40x100.png") 50% 50% repeat-x;
+	background: #9FC905 url("images/ui-bg_flat_0_9FC905_40x100.png") 50% 50% repeat-x;
 	opacity: .3;
 	filter: Alpha(Opacity=30); /* support: IE8 */
 }
 .ui-widget-shadow {
 	margin: -8px 0 0 -8px;
 	padding: 8px;
-	background: #0BF80C url("images/ui-bg_flat_0_0BF80C_40x100.png") 50% 50% repeat-x;
+	background: #9FC905 url("images/ui-bg_flat_0_9FC905_40x100.png") 50% 50% repeat-x;
 	opacity: .3;
 	filter: Alpha(Opacity=30); /* support: IE8 */
 	border-radius: 8px;
